Fix margins and spacing issues

--- a/src/components/BrandGuides/GuidesSection/style.scss
+++ b/src/components/BrandGuides/GuidesSection/style.scss
@@ -84,6 +84,7 @@
   }
 
   &__sub-title {
+    width: 90%;
     max-width: 680px;
     margin-bottom: 40px;
     font-family: $font-secondary;
@@ -105,6 +106,7 @@
     }
 
     @media #{$screen-sm} {
+      width: auto;
       margin-bottom: 80px;
       font-size: 30px;
       line-height: 45px;
@@ -145,19 +147,19 @@
 
   &__detail-text {
     margin-bottom: 20px;
-    font-size: 8px;
+    font-size: 12px;
     font-weight: 600;
-    line-height: 10px;
+    line-height: 30px;
     color: $c_white;
 
     @media #{$screen-sm} {
       margin-bottom: 40px;
       font-size: 16px;
-      line-height: 30px;
     }
   }
 
   &__text {
+    width: 90%;
     max-width: 800px;
     margin-bottom: 20px;
     font-size: 14px;
@@ -170,6 +172,7 @@
     }
 
     @media #{$screen-sm} {
+      width: auto;
       margin-bottom: 40px;
       font-size: 20px;
       line-height: 30px;
@@ -179,6 +182,9 @@
   &__action-button {
     display: flex;
     justify-content: flex-end;
-    margin: 80px 0;
+
+    @media #{$screen-md} {
+      margin: 80px 0;
+    }
   }
 }
